fixed spacing for title

--- a/css/indexPage.css
+++ b/css/indexPage.css
@@ -1,6 +1,6 @@
 /* ABOUT */
 .about {
-    padding: 3em;
+    padding: 2em;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -35,7 +35,7 @@ main > section {
     color: rgb(45, 44, 44);
     grid-row: 1;
     font-size: 1.7em;
-    margin: 1rem;
+    margin: 2rem;
 }
 
 #postContent{
@@ -65,10 +65,12 @@ main > section {
        Small enough that it isnt super noticable but does make a difference*/
     transform: scale(1.005);
 }
+
 .postText{
     flex: 3;
     margin: 0 3vw;
     padding:  10px .5rem 2vh .5rem;
+
 }
 
 .post h3 {
@@ -76,7 +78,7 @@ main > section {
     margin-bottom: .2rem;
 }
 
-.post p { 
+.post p {  
     font-size: 1.2em;
 }
 
